# WebRTC-AudioProcessing

./: CMakeLists.txt  README.md  run.sh
data/: addednoise.raw  speech_16k_echo.raw
src/: webrtc_audio_processing.cc  webrtc_audio_processing_old.cc
